got ablation to work again

--- a/Qwen3- Generate-attribution-graphs.ipynb
+++ b/Qwen3- Generate-attribution-graphs.ipynb
@@ -58,7 +58,7 @@
       "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in /opt/miniforge3/lib/python3.12/site-packages (from ipywidgets>=8.1.7->circuit-tracer==0.1.0) (3.0.15)\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /opt/miniforge3/lib/python3.12/site-packages (from jedi>=0.16->ipython>=7.23.1->ipykernel>=6.29.5->circuit-tracer==0.1.0) (0.8.5)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/miniforge3/lib/python3.12/site-packages (from jupyter-client>=8.0.0->ipykernel>=6.29.5->circuit-tracer==0.1.0) (2.9.0.post0)\n",
-      "Requirement already satisfied: platformdirs>=2.5 in /opt/miniforge3/lib/python3.12/site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel>=6.29.5->circuit-tracer==0.1.0) (4.4.0)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in /opt/miniforge3/lib/python3.12/site-packages (from jupyter-core!=5.0.*,>=4.12->ipykernel>=6.29.5->circuit-tracer==0.1.0) (4.3.8)\n",
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/miniforge3/lib/python3.12/site-packages (from pexpect>4.3->ipython>=7.23.1->ipykernel>=6.29.5->circuit-tracer==0.1.0) (0.7.0)\n",
       "Requirement already satisfied: annotated-types>=0.6.0 in /opt/miniforge3/lib/python3.12/site-packages (from pydantic>=2.0.0->circuit-tracer==0.1.0) (0.7.0)\n",
       "Requirement already satisfied: pydantic-core==2.33.2 in /opt/miniforge3/lib/python3.12/site-packages (from pydantic>=2.0.0->circuit-tracer==0.1.0) (2.33.2)\n",
@@ -131,7 +131,7 @@
       "Building wheels for collected packages: circuit-tracer\n",
       "  Building editable for circuit-tracer (pyproject.toml) ... \u001b[?25ldone\n",
       "\u001b[?25h  Created wheel for circuit-tracer: filename=circuit_tracer-0.1.0-py3-none-any.whl size=6276 sha256=2c87e84c24f3f689918577f7bf89205ab3d12e70b6530587d82f51e82eaf2a86\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-mrl1k3ua/wheels/76/ab/fc/ab83556a0dc31920cedf3577d2da40580dd6f44d0b6ec2989a\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-rz_k9g5p/wheels/76/ab/fc/ab83556a0dc31920cedf3577d2da40580dd6f44d0b6ec2989a\n",
       "Successfully built circuit-tracer\n",
       "Installing collected packages: circuit-tracer\n",
       "  Attempting uninstall: circuit-tracer\n",
@@ -198,7 +198,7 @@
     "from pathlib import Path\n",
     "import torch\n",
     "\n",
-    "from circuit_tracer import ReplacementModel, attribute\n",
+    "from circuit_tracer import attribute\n",
     "from circuit_tracer.utils import create_graph_files\n",
     "\n"
    ]
@@ -218,7 +218,85 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e33c9a9",
+   "id": "5f960c4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qwen_reciever_heads = [(38, 25),\n",
+    " (37, 30),\n",
+    " (36, 38),\n",
+    " (36, 37),\n",
+    " (5, 17),\n",
+    " (38, 10),\n",
+    " (24, 21),\n",
+    " (5, 16),\n",
+    " (5, 2),\n",
+    " (5, 0),\n",
+    " (34, 31),\n",
+    " (31, 3),\n",
+    " (34, 34),\n",
+    " (36, 36),\n",
+    " (38, 26),\n",
+    " (32, 2),\n",
+    " (36, 21),\n",
+    " (23, 16),\n",
+    " (5, 3),\n",
+    " (34, 4),\n",
+    " (34, 2),\n",
+    " (5, 7),\n",
+    " (36, 23),\n",
+    " (32, 3),\n",
+    " (30, 9),\n",
+    " (3, 26),\n",
+    " (4, 27),\n",
+    " (38, 31),\n",
+    " (9, 39),\n",
+    " (5, 23),\n",
+    " (5, 24),\n",
+    " (3, 8),\n",
+    " (6, 30),\n",
+    " (38, 14),\n",
+    " (4, 28),\n",
+    " (34, 3),\n",
+    " (3, 27),\n",
+    " (36, 20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "53e8f321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ablate_heads  = qwen_reciever_heads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7ff35382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-14B\"\n",
+    "transcoder_name = \"mwhanna/qwen3-14b-transcoders-lowl0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d757422c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"Qwen/Qwen3-14B\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8b3c4000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,6 +416,8 @@
     "        )\n",
     "\n",
     "        model._configure_replacement_model(transcoders)\n",
+    "        if ablate_heads is not None:\n",
+    "            model.ablate_attention_heads(ablate_heads)\n",
     "        return model\n",
     "\n",
     "    @classmethod\n",
@@ -370,27 +450,23 @@
     "            dtype=dtype,\n",
     "            **kwargs,\n",
     "        )\n",
-    "    # ---- Public constructors (keep API parity) ----\n",
-    "    def ablate_attention_heads(self, heads_to_ablate):\n",
+    "    \n",
+    "    def ablate_attention_heads(self, heads_to_ablate: list[tuple[int, int]]):\n",
     "        \"\"\"\n",
-    "        Register forward hooks to ablate (zero out) specific attention heads.\n",
-    "        heads_to_ablate: list of (layer_idx, head_idx) tuples\n",
+    "        Ablate (zero out) specific attention heads.\n",
+    "        heads_to_ablate: list of (layer_idx, head_idx) tuples.\n",
     "        \"\"\"\n",
     "        self._ablation_hooks = getattr(self, \"_ablation_hooks\", [])\n",
-    "        # Remove any previous ablation hooks\n",
-    "        for h in self._ablation_hooks:\n",
-    "            h.remove()\n",
-    "        self._ablation_hooks = []\n",
     "\n",
     "        def make_ablation_hook(head_idx):\n",
     "            def ablation_hook(module, input, output):\n",
-    "                # output: (batch, seq, hidden)\n",
+    "                # Output shape: [batch, seq, n_heads * head_dim]\n",
     "                attn_out = output[0] if isinstance(output, tuple) else output\n",
-    "                num_heads = getattr(module, \"num_heads\", getattr(module, \"num_attention_heads\", None))\n",
-    "                if num_heads is None:\n",
-    "                    raise AttributeError(\"Could not determine number of attention heads\")\n",
-    "                head_dim = attn_out.shape[-1] // num_heads\n",
-    "                attn_out = attn_out.view(attn_out.shape[0], attn_out.shape[1], num_heads, head_dim)\n",
+    "                n_heads = getattr(module, \"n_heads\", None) or getattr(module, \"num_heads\", None)\n",
+    "                if n_heads is None:\n",
+    "                    return output  # skip if not a standard attention module\n",
+    "                head_dim = attn_out.shape[-1] // n_heads\n",
+    "                attn_out = attn_out.view(attn_out.shape[0], attn_out.shape[1], n_heads, head_dim)\n",
     "                attn_out[:, :, head_idx, :] = 0\n",
     "                attn_out = attn_out.view(attn_out.shape[0], attn_out.shape[1], -1)\n",
     "                if isinstance(output, tuple):\n",
@@ -399,22 +475,10 @@
     "                    return attn_out\n",
     "            return ablation_hook\n",
     "\n",
-    "        for layer_idx, head_idx in heads_to_ablate:\n",
-    "            # Try to find the attention module\n",
-    "            try:\n",
-    "                attn_mod = self._get_layer_module(layer_idx, \"self_attn\")\n",
-    "            except AttributeError:\n",
-    "                attn_mod = self._get_layer_module(layer_idx, \"attention\")\n",
-    "            hook = attn_mod.register_forward_hook(make_ablation_hook(head_idx))\n",
-    "            self._ablation_hooks.append(hook)\n",
-    "\n",
-    "    def clear_ablation_hooks(self):\n",
-    "        \"\"\"Remove all ablation hooks.\"\"\"\n",
-    "        if hasattr(self, \"_ablation_hooks\"):\n",
-    "            for h in self._ablation_hooks:\n",
-    "                h.remove()\n",
-    "            self._ablation_hooks = []\n",
-    "            \n",
+    "        # Remove previous ablation hooks if any\n",
+    "        for hook in getattr(self, \"_ablation_hooks\", []):\n",
+    "            hook.remove()\n",
+    "        self._ablation_hooks = []\n",
     "    def _configure_replacement_model(self, transcoder_set: TranscoderSet | CrossLayerTranscoder):\n",
     "        transcoder_set.to(self.cfg.device, self.cfg.dtype)\n",
     "\n",
@@ -1115,87 +1179,19 @@
     "\n",
     "    def __del__(self):\n",
     "        # Prevent memory leaks\n",
-    "        self.reset_hooks(including_permanent=True)\n"
+    "        self.reset_hooks(including_permanent=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5f960c4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qwen_reciever_heads = [(38, 25),\n",
-    " (37, 30),\n",
-    " (36, 38),\n",
-    " (36, 37),\n",
-    " (5, 17),\n",
-    " (38, 10),\n",
-    " (24, 21),\n",
-    " (5, 16),\n",
-    " (5, 2),\n",
-    " (5, 0),\n",
-    " (34, 31),\n",
-    " (31, 3),\n",
-    " (34, 34),\n",
-    " (36, 36),\n",
-    " (38, 26),\n",
-    " (32, 2),\n",
-    " (36, 21),\n",
-    " (23, 16),\n",
-    " (5, 3),\n",
-    " (34, 4),\n",
-    " (34, 2),\n",
-    " (5, 7),\n",
-    " (36, 23),\n",
-    " (32, 3),\n",
-    " (30, 9),\n",
-    " (3, 26),\n",
-    " (4, 27),\n",
-    " (38, 31),\n",
-    " (9, 39),\n",
-    " (5, 23),\n",
-    " (5, 24),\n",
-    " (3, 8),\n",
-    " (6, 30),\n",
-    " (38, 14),\n",
-    " (4, 28),\n",
-    " (34, 3),\n",
-    " (3, 27),\n",
-    " (36, 20)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7ff35382",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-14B\"\n",
-    "transcoder_name = \"mwhanna/qwen3-14b-transcoders-lowl0\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d757422c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"Qwen/Qwen3-14B\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b91ee13d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e97f0ff17794789bb86612305d91062",
+       "model_id": "3af197b7f373496c8c32cc98a0120772",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1207,186 +1203,34 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Loading model Qwen/Qwen3-14B requires setting trust_remote_code=True\n",
+      "WARNING:root:Loading model Qwen/Qwen3-14B state dict requires setting trust_remote_code=True\n",
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6af3d9876bf8466faed6bb83e7414512",
+       "model_id": "9edf4afb2090408b9b29f0a0488963cc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "layer_1.safetensors:  73%|#######2  | 2.44G/3.36G [00:00<?, ?B/s]"
+       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb98a99e21194e2a9d0cc404455b8b0b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_15.safetensors:   7%|6         | 220M/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8d7e1828d594667aed7c1e5a8ea9f87",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_13.safetensors:   4%|4         | 147M/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eda679818b034ad9979922416654d5e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_10.safetensors:   6%|5         | 189M/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bde93e059c3b493c9dc40dd4e1534304",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_11.safetensors:   6%|6         | 210M/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a643cf45a9746c68e83545bb4101bc9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_0.safetensors:   4%|4         | 147M/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55ca1227dde947ef8ff0b3f6e0b24104",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_12.safetensors:  86%|########5 | 2.87G/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b5c2c8f5ab2449dbc34d80c451f098f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_14.safetensors:   5%|5         | 178M/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af16ef7c2bbc41e1a3f81ca59c238b41",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_16.safetensors:   0%|          | 0.00/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b3210f871b840e0aebe592164003c24",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_17.safetensors:   0%|          | 0.00/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47f317ee9f5441818c4b65b8bc4085f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_18.safetensors:   0%|          | 0.00/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d6f5d3061dc4efd9055524e0ad8b3bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_19.safetensors:   0%|          | 0.00/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9594451018604087a68d33b97e7f23be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "layer_2.safetensors:   0%|          | 0.00/3.36G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded pretrained model Qwen/Qwen3-14B into HookedTransformer\n"
+     ]
     }
    ],
    "source": [
@@ -1395,17 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5760f5a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.ablate_attention_heads(qwen_reciever_heads)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e449ca7e",
    "metadata": {},
    "outputs": [],
@@ -1415,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4fc48532",
    "metadata": {},
    "outputs": [],
@@ -1431,10 +1265,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9fc199fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Phase 0: Precomputing activations and vectors\n",
+      "Precomputation completed in 0.99s\n",
+      "Found 25999 active features\n",
+      "Phase 1: Running forward pass\n",
+      "Forward pass completed in 0.11s\n",
+      "Phase 2: Building input vectors\n",
+      "Selected 6 logits with cumulative probability 0.9492\n",
+      "Will include 8192 of 25999 feature nodes\n",
+      "Input vectors built in 1.81s\n",
+      "Phase 3: Computing logit attributions\n",
+      "sys:1: UserWarning: Full backward hook is firing when gradients are computed with respect to module outputs since no inputs require gradients. See https://docs.pytorch.org/docs/main/generated/torch.nn.Module.html#torch.nn.Module.register_full_backward_hook for more details.\n",
+      "Logit attributions completed in 0.07s\n",
+      "Phase 4: Computing feature attributions\n",
+      "Feature influence computation: 100%|██████████| 8192/8192 [00:57<00:00, 141.93it/s]\n",
+      "Feature attributions completed in 57.72s\n",
+      "Attribution completed in 107.70s\n"
+     ]
+    }
+   ],
    "source": [
     "graph = attribute(\n",
     "    prompt=prompt,\n",
@@ -1451,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a7e090a4",
    "metadata": {},
    "outputs": [],
@@ -1467,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "66a67d27",
    "metadata": {},
    "outputs": [],
@@ -1488,10 +1345,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b8421a3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Use the IFrame below, or open your graph here: f'http://localhost:8053/index.html'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"800px\"\n",
+       "            src=\"http://localhost:8053/index.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x78de8c1b7980>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from circuit_tracer.frontend.local_server import serve\n",
     "\n",
@@ -1525,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
